# dbzk_fps

./: .gitignore  .gitmodules  AT-Win64-Shipping.CT  Build_Debug.sh  Build_Release.sh  CMakeLists.txt  DRAGON BALL Z KAKAROT.CT  LICENSE  Notes.txt  README.md  appveyor.yml  dbzk_fps.sln
.vxcproj/: dbzk_fps.vcxproj  dbzk_fps.vcxproj.filters
Binaries/Win64/plugins/: config.ini
Binaries/Windows/: Config.ini
Source/: dllmain.cpp  framework.h  pch.cpp  pch.h  resource.h
Source/Managers/: ConfigManager.cpp  ConfigManager.h  ConsoleManager.cpp  ConsoleManager.h  HookManager.cpp  HookManager.h  PatchManager.cpp  PatchManager.h
Source/Settings/: PlayerSettings.cpp  PlayerSettings.h
